BusListActivity로 화면 전환해서 출력

--- a/app/src/main/res/layout/activity_bus_list.xml
+++ b/app/src/main/res/layout/activity_bus_list.xml
@@ -14,11 +14,17 @@
         android:padding="@dimen/inner_frame_layout_padding"
         app:layout_boxedEdges="all">
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_world" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/hello_world" />
+        </ScrollView>
 
     </FrameLayout>
+
 </androidx.wear.widget.BoxInsetLayout>
