--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,11 @@
     <androidx.wear.widget.WearableRecyclerView
         android:id="@+id/wearableRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-       />
+        android:layout_height="match_parent">
+        <requestFocus
+            android:focusable="true"
+            android:focusableInTouchMode="true"/>
+    </androidx.wear.widget.WearableRecyclerView>
+
 
 </LinearLayout>
