--- a/app/src/main/res/layout/activity_stop_list.xml
+++ b/app/src/main/res/layout/activity_stop_list.xml
@@ -18,6 +18,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0" >
+        <requestFocus
+            android:focusable="true"
+            android:focusableInTouchMode="true"/>
+    </androidx.wear.widget.WearableRecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
