--- a/app/src/main/res/layout/activity_bus_list.xml
+++ b/app/src/main/res/layout/activity_bus_list.xml
@@ -1,24 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     android:padding="@dimen/box_inset_layout_padding"
-    tools:context=".BusListActivity"
-    tools:deviceIds="wear">
+    tools:context=".BusListActivity">
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/inner_frame_layout_padding"
-        app:layout_boxedEdges="all">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/text"
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_world" />
+            android:layout_height="30dp"
+            android:foregroundGravity="center|right"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </FrameLayout>
-</androidx.wear.widget.BoxInsetLayout>
+    <androidx.wear.widget.WearableRecyclerView
+        android:id="@+id/BusRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:focusable="true"
+        android:scrollbars="vertical">
+
+        <requestFocus
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
+
+
+    </androidx.wear.widget.WearableRecyclerView>
+
+</LinearLayout>
